--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet-async": "^1.0.4",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1"
   }
 }
