--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:build-server": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "stubs": "nodemon src/stubs/index.js",
+    "test": "jest --watchAll",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint '**/*.js' --write"
   },
@@ -46,10 +47,15 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-remove-properties": "^0.3.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-polyfill": "^6.26.0",
+    "check-prop-types": "^1.1.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
@@ -57,7 +63,11 @@
     "file-loader": "^4.2.0",
     "http-proxy-middleware": "^0.20.0",
     "husky": "^3.0.9",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^9.4.2",
+    "moxios": "^0.4.0",
     "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
     "prettier-eslint": "^9.0.0",
